# ml2-project

./: ML2 project.pptx  README.md  classification.html  classification.ipynb  district_mapping.json  pediatric appendicitis dataset.csv  pyproject.toml  regression.html  regression.ipynb  requirements.txt
