[project]
name = "ml2-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.28.0",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
]
