[project]
name = "ml2-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0",
    "scikit-learn==1.4.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "unidecode>=1.3.8",
    "xgboost==2.0.2",
]
